--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
     "prisma": "^5.20.0"
   }
 }
