--- a/jelly/package.json
+++ b/jelly/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@stream-io/video-react-sdk": "^1.6.0",
+    "@supabase/realtime-js": "^2.10.7",
     "@supabase/supabase-js": "^2.45.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
