--- a/jelly/package.json
+++ b/jelly/package.json
@@ -42,6 +42,7 @@
     "next": "^14.2.14",
     "postcss-loader": "^8.1.1",
     "punycode": "^2.3.1",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
