--- a/jelly/package.json
+++ b/jelly/package.json
@@ -41,6 +41,7 @@
     "feather-icons": "^4.29.2",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
+    "openai": "^4.67.3",
     "postcss-loader": "^8.1.1",
     "punycode": "^2.3.1",
     "qrcode.react": "^4.0.1",
