--- a/jelly/package.json
+++ b/jelly/package.json
@@ -40,7 +40,7 @@
     "date-fns": "^3.6.0",
     "feather-icons": "^4.29.2",
     "lucide-react": "^0.447.0",
-    "next": "^14.2.14",
+    "next": "^14.2.15",
     "openai": "^4.67.3",
     "postcss-loader": "^8.1.1",
     "punycode": "^2.3.1",
@@ -53,8 +53,7 @@
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.0.0",
-    "xxx": "^0.0.1"
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
