--- a/jelly/package.json
+++ b/jelly/package.json
@@ -53,12 +53,14 @@
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vaul": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
